test/functional/directory/gds/ts/gdssetup/lib/invalid/sv_domdef4.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# HISTORY
# $Log: sv_domdef4.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:34:51  marty
# 	Update copyright years
# 	[1996/03/10  19:37:07  marty]
#
# Revision 1.1.4.1  1995/12/11  15:29:16  root
# 	Submit
# 	[1995/12/11  14:37:30  root]
# 
# Revision 1.1.2.2  1994/08/19  13:54:28  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:58  marrek]
# 
# Revision 1.1.2.1  1994/07/15  13:29:45  marrek
# 	More gdssetup testcases.
# 	[1994/07/15  08:50:38  marrek]
# 
# $EndLog$
#
# $RCSfile: sv_domdef4.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:34:51 $
#

#Delete dir-id 3

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
